--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,10 +1,20 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-app_lucky_number:
-  path: /lucky/number
-  controller: App\Controller\LuckyController::number
 
 app_currency_show:
   path: /show/currencies
   controller: App\Controller\CurrencyController::showCurrencies
+
+app_currencies:
+  path: /currencies
+  controller: App\Controller\ApiCurrencyController::getList
+  defaults: { page: 1}
+  requirements:
+    page: \d+
+
+app_currency:
+  path: /currency
+  controller: App\Controller\ApiCurrencyController::getItem
+  requirements:
+    page: \string+
